bukkit-4.4.0 | Dropped java from 11 to 8